--- a/pom.xml
+++ b/pom.xml
@@ -91,12 +91,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!-- log4j. -->
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
+        <!--&lt;!&ndash; log4j. &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>log4j</groupId>-->
+            <!--<artifactId>log4j</artifactId>-->
+            <!--<version>1.2.17</version>-->
+        <!--</dependency>-->
         <!-- log4j2依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
