--- a/src/main/resources/application-mybatisplus.yml
+++ b/src/main/resources/application-mybatisplus.yml
@@ -24,6 +24,7 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: true
+#    jdbc-type-for-null: null
 ##logging
 #logging:
 #  level: warn
