--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-db: ANNIEMODERN
+db: anniemodern
 spring:
   profiles:
     active: dev
@@ -8,8 +8,9 @@ spring:
     password: CDhuayuan@2019$anniemodern
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://140.246.250.63:3306/${db}?useUnicode=true&characterEncoding=UTF-8&useSSL=false&tinyIntlisBit=true&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=CONVERT_TO_NULL
+    url: jdbc:mysql://localhost:3306/${db}?useUnicode=true&characterEncoding=UTF-8&useSSL=false&tinyIntlisBit=true&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=CONVERT_TO_NULL
     username: root
-    password: 0q8O<G+Ry!lj
+    password: 3204
+#    password: 0q8O<G+Ry!lj
 logging:
   config: classpath:log4j2.yml
