--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,20 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.8</version>
         </dependency>
+
+        <!--xml解析-->
+        <dependency>
+            <groupId>cl.symbiose</groupId>
+            <artifactId>dom4j-to-json</artifactId>
+            <version>1.1.2</version>
+            <classifier>sources</classifier>
+            <type>java-source</type>
+        </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.2.2</version>
+        </dependency>
     </dependencies>
 
     <build>
