--- a/pom.xml
+++ b/pom.xml
@@ -131,8 +131,13 @@
         <dependency>
             <groupId>com.github.binarywang</groupId>
             <artifactId>weixin-java-mp</artifactId>
-            <version>3.3.0</version>
+            <version>3.4.0</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.github.binarywang</groupId>-->
+            <!--<artifactId>weixin-java-pay</artifactId>-->
+            <!--<version>3.4.0</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
